package com.lld.problems.elevator.code.constants;

public enum Direction {
    UP,
    DOWN
}
