package com.lld.problems.elevator.code.models;

public class Floor {
    private int floorNumber;

    public Floor(int number) {
        this.floorNumber = number;
    }

    public int getFloorNumber() {
        return this.floorNumber;
    }
}
